@@ -27,27 +27,207 @@ import javafx.stage.Stage;
 
 public class SquadBuilder extends Application {
   private static final DropShadow shadow = Constants.SHADOW_EFFECT;
+  final List<Label> playerLabels = new ArrayList<>();
+  final List<ComboBox<String>> comboBoxes = new ArrayList<>();
   private final Map<Circle, List<String>> circleToPositionMap = new HashMap<>();
   private final Rectangle boundary = new Rectangle();
-  private final Map<String, List<String>> positionToRolesMap = new HashMap<>() {{
-    put("ST (C)", Arrays.asList("DEEP_LYING_FORWARD_SUPPORT", "DEEP_LYING_FORWARD_ATTACK", "ADVANCED_FORWARD_ATTACK", "TARGET_FORWARD_SUPPORT", "TARGET_FORWARD_ATTACK", "POACHER_ATTACK", "COMPLETE_FORWARD_SUPPORT", "COMPLETE_FORWARD_ATTACK", "PRESSING_FORWARD_DEFEND", "PRESSING_FORWARD_SUPPORT", "PRESSING_FORWARD_ATTACK", "TREQUARTISTA_ATTACK", "FALSE_NINE_SUPPORT"));
-    put("AM (C)", Arrays.asList("ATTACKING_MIDFIELDER_SUPPORT", "ATTACKING_MIDFIELDER_ATTACK", "ADVANCED_PLAYMAKER_SUPPORT", "ADVANCED_PLAYMAKER_ATTACK", "ENGANCHE_SUPPORT", "SHADOW_STRIKER_ATTACK"));
-    put("AM (L)", Arrays.asList("WINGER_SUPPORT", "WINGER_ATTACK", "INSIDE_FORWARD_SUPPORT", "INSIDE_FORWARD_ATTACK", "WIDE_TARGET_FORWARD_SUPPORT", "WIDE_TARGET_FORWARD_ATTACK", "RAMDEUTER_ATTACK", "INVERTED_WINGER_SUPPORT", "INVERTED_WINGER_ATTACK"));
-    put("AM (R)", Arrays.asList("WINGER_SUPPORT", "WINGER_ATTACK", "INSIDE_FORWARD_SUPPORT", "INSIDE_FORWARD_ATTACK", "WIDE_TARGET_FORWARD_SUPPORT", "WIDE_TARGET_FORWARD_ATTACK", "RAMDEUTER_ATTACK", "INVERTED_WINGER_SUPPORT", "INVERTED_WINGER_ATTACK"));
-    put("M (C)", Arrays.asList("CENTRAL_MIDFIELDER_DEFEND", "CENTRAL_MIDFIELDER_SUPPORT", "CENTRAL_MIDFIELDER_ATTACK", "CENTRAL_MIDFIELDER_AUTOMATIC", "DEEP_LYING_PLAYMAKER_DEFEND", "DEEP_LYING_PLAYMAKER_SUPPORT", "BOX_TO_BOX_MIDFIELDER_SUPPORT", "BALL_WINNING_MIDFIELDER_DEFEND", "BALL_WINNING_MIDFIELDER_SUPPORT", "ROAMING_PLAYMAKER_SUPPORT", "MEZZALA_SUPPORT", "MEZZALA_ATTACK", "CARRILERO_SUPPORT"));
-    put("M (L)", Arrays.asList("WIDE_MIDFIELDER_DEFEND", "WIDE_MIDFIELDER_SUPPORT", "WIDE_MIDFIELDER_ATTACK", "WIDE_MIDFIELDER_AUTOMATIC", "WINGER_SUPPORT", "WINGER_ATTACK", "DEFENSIVE_WINGER_DEFEND", "DEFENSIVE_WINGER_SUPPORT", "WIDE_PLAYMAKER_SUPPORT", "WIDE_PLAYMAKER_ATTACK", "INVERTED_WINGER_SUPPORT", "INVERTED_WINGER_ATTACK"));
-    put("M (R)", Arrays.asList("WIDE_MIDFIELDER_DEFEND", "WIDE_MIDFIELDER_SUPPORT", "WIDE_MIDFIELDER_ATTACK", "WIDE_MIDFIELDER_AUTOMATIC", "WINGER_SUPPORT", "WINGER_ATTACK", "DEFENSIVE_WINGER_DEFEND", "DEFENSIVE_WINGER_SUPPORT", "WIDE_PLAYMAKER_SUPPORT", "WIDE_PLAYMAKER_ATTACK", "INVERTED_WINGER_SUPPORT", "INVERTED_WINGER_ATTACK"));
-    put("DM", Arrays.asList("DEFENSIVE_MIDFIELDER_DEFEND", "DEFENSIVE_MIDFIELDER_SUPPORT", "DEEP_LYING_PLAYMAKER_DEFEND", "DEEP_LYING_PLAYMAKER_SUPPORT", "BALL_WINNING_MIDFIELDER_DEFEND", "BALL_WINNING_MIDFIELDER_SUPPORT", "ANCHOR_DEFEND", "HALF_BACK_DEFEND", "REGISTA_SUPPORT", "SEGUNDO_VOLANTE_SUPPORT", "SEGUNDO_VOLANTE_ATTACK"));
-    put("WB (L)",Arrays.asList("WING_BACK_DEFEND", "WING_BACK_SUPPORT", "WING_BACK_ATTACK", "WING_BACK_AUTOMATIC", "COMPLETE_WING_BACK_SUPPORT", "COMPLETE_WING_BACK_ATTACK", "INVERTED_WING_BACK_DEFEND", "INVERTED_WING_BACK_SUPPORT", "INVERTED_WING_BACK_ATTACK", "INVERTED_WING_BACK_AUTOMATIC"));
-    put("WB (R)",Arrays.asList("WING_BACK_DEFEND", "WING_BACK_SUPPORT", "WING_BACK_ATTACK", "WING_BACK_AUTOMATIC", "COMPLETE_WING_BACK_SUPPORT", "COMPLETE_WING_BACK_ATTACK", "INVERTED_WING_BACK_DEFEND", "INVERTED_WING_BACK_SUPPORT", "INVERTED_WING_BACK_ATTACK", "INVERTED_WING_BACK_AUTOMATIC"));
-    put("D (C)", Arrays.asList("CENTRAL_DEFENDER_DEFEND", "CENTRAL_DEFENDER_STOPPER", "CENTRAL_DEFENDER_COVER", "LIBERO_SUPPORT", "LIBERO_ATTACK", "BALL_PLAYING_DEFENDER_DEFEND", "BALL_PLAYING_DEFENDER_STOPPER", "NO_NONSENSE_CENTRE_BACK_COVER", "NO_NONSENSE_CENTRE_BACK_DEFEND", "NO_NONSENSE_CENTRE_BACK_STOPPER", "NO_NONSENSE_CENTRE_BACK_COVER", "WIDE_CENTER_BACK_DEFEND", "WIDE_CENTER_BACK_SUPPORT", "WIDE_CENTER_BACK_ATTACK"));
-    put("D (L)",Arrays.asList("FULL_BACK_DEFEND", "FULL_BACK_SUPPORT", "FULL_BACK_ATTACK", "FULL_BACK_AUTOMATIC","WING_BACK_DEFEND", "WING_BACK_SUPPORT", "WING_BACK_ATTACK", "WING_BACK_AUTOMATIC", "NO_NONSENSE_FULL_BACK_DEFEND", "INVERTED_WING_BACK_DEFEND", "INVERTED_WING_BACK_SUPPORT", "INVERTED_WING_BACK_ATTACK", "INVERTED_WING_BACK_AUTOMATIC"));
-    put("D (R)",Arrays.asList("FULL_BACK_DEFEND", "FULL_BACK_SUPPORT", "FULL_BACK_ATTACK", "FULL_BACK_AUTOMATIC","WING_BACK_DEFEND", "WING_BACK_SUPPORT", "WING_BACK_ATTACK", "WING_BACK_AUTOMATIC", "NO_NONSENSE_FULL_BACK_DEFEND", "INVERTED_WING_BACK_DEFEND", "INVERTED_WING_BACK_SUPPORT", "INVERTED_WING_BACK_ATTACK", "INVERTED_WING_BACK_AUTOMATIC"));
-    put("GK",Arrays.asList("GOALKEEPER_DEFEND", "SWEEPER_KEEPER_DEFEND", "SWEEPER_KEEPER_SUPPORT", "SWEEPER_KEEPER_ATTACK"));
-  }};
+  private final Map<String, List<String>> positionToRolesMap =
+      new HashMap<>() {
+        {
+          put(
+              "ST (C)",
+              Arrays.asList(
+                  "DEEP_LYING_FORWARD_SUPPORT",
+                  "DEEP_LYING_FORWARD_ATTACK",
+                  "ADVANCED_FORWARD_ATTACK",
+                  "TARGET_FORWARD_SUPPORT",
+                  "TARGET_FORWARD_ATTACK",
+                  "POACHER_ATTACK",
+                  "COMPLETE_FORWARD_SUPPORT",
+                  "COMPLETE_FORWARD_ATTACK",
+                  "PRESSING_FORWARD_DEFEND",
+                  "PRESSING_FORWARD_SUPPORT",
+                  "PRESSING_FORWARD_ATTACK",
+                  "TREQUARTISTA_ATTACK",
+                  "FALSE_NINE_SUPPORT"));
+          put(
+              "AM (C)",
+              Arrays.asList(
+                  "ATTACKING_MIDFIELDER_SUPPORT",
+                  "ATTACKING_MIDFIELDER_ATTACK",
+                  "ADVANCED_PLAYMAKER_SUPPORT",
+                  "ADVANCED_PLAYMAKER_ATTACK",
+                  "ENGANCHE_SUPPORT",
+                  "SHADOW_STRIKER_ATTACK"));
+          put(
+              "AM (L)",
+              Arrays.asList(
+                  "WINGER_SUPPORT",
+                  "WINGER_ATTACK",
+                  "INSIDE_FORWARD_SUPPORT",
+                  "INSIDE_FORWARD_ATTACK",
+                  "WIDE_TARGET_FORWARD_SUPPORT",
+                  "WIDE_TARGET_FORWARD_ATTACK",
+                  "RAMDEUTER_ATTACK",
+                  "INVERTED_WINGER_SUPPORT",
+                  "INVERTED_WINGER_ATTACK"));
+          put(
+              "AM (R)",
+              Arrays.asList(
+                  "WINGER_SUPPORT",
+                  "WINGER_ATTACK",
+                  "INSIDE_FORWARD_SUPPORT",
+                  "INSIDE_FORWARD_ATTACK",
+                  "WIDE_TARGET_FORWARD_SUPPORT",
+                  "WIDE_TARGET_FORWARD_ATTACK",
+                  "RAMDEUTER_ATTACK",
+                  "INVERTED_WINGER_SUPPORT",
+                  "INVERTED_WINGER_ATTACK"));
+          put(
+              "M (C)",
+              Arrays.asList(
+                  "CENTRAL_MIDFIELDER_DEFEND",
+                  "CENTRAL_MIDFIELDER_SUPPORT",
+                  "CENTRAL_MIDFIELDER_ATTACK",
+                  "CENTRAL_MIDFIELDER_AUTOMATIC",
+                  "DEEP_LYING_PLAYMAKER_DEFEND",
+                  "DEEP_LYING_PLAYMAKER_SUPPORT",
+                  "BOX_TO_BOX_MIDFIELDER_SUPPORT",
+                  "BALL_WINNING_MIDFIELDER_DEFEND",
+                  "BALL_WINNING_MIDFIELDER_SUPPORT",
+                  "ROAMING_PLAYMAKER_SUPPORT",
+                  "MEZZALA_SUPPORT",
+                  "MEZZALA_ATTACK",
+                  "CARRILERO_SUPPORT"));
+          put(
+              "M (L)",
+              Arrays.asList(
+                  "WIDE_MIDFIELDER_DEFEND",
+                  "WIDE_MIDFIELDER_SUPPORT",
+                  "WIDE_MIDFIELDER_ATTACK",
+                  "WIDE_MIDFIELDER_AUTOMATIC",
+                  "WINGER_SUPPORT",
+                  "WINGER_ATTACK",
+                  "DEFENSIVE_WINGER_DEFEND",
+                  "DEFENSIVE_WINGER_SUPPORT",
+                  "WIDE_PLAYMAKER_SUPPORT",
+                  "WIDE_PLAYMAKER_ATTACK",
+                  "INVERTED_WINGER_SUPPORT",
+                  "INVERTED_WINGER_ATTACK"));
+          put(
+              "M (R)",
+              Arrays.asList(
+                  "WIDE_MIDFIELDER_DEFEND",
+                  "WIDE_MIDFIELDER_SUPPORT",
+                  "WIDE_MIDFIELDER_ATTACK",
+                  "WIDE_MIDFIELDER_AUTOMATIC",
+                  "WINGER_SUPPORT",
+                  "WINGER_ATTACK",
+                  "DEFENSIVE_WINGER_DEFEND",
+                  "DEFENSIVE_WINGER_SUPPORT",
+                  "WIDE_PLAYMAKER_SUPPORT",
+                  "WIDE_PLAYMAKER_ATTACK",
+                  "INVERTED_WINGER_SUPPORT",
+                  "INVERTED_WINGER_ATTACK"));
+          put(
+              "DM",
+              Arrays.asList(
+                  "DEFENSIVE_MIDFIELDER_DEFEND",
+                  "DEFENSIVE_MIDFIELDER_SUPPORT",
+                  "DEEP_LYING_PLAYMAKER_DEFEND",
+                  "DEEP_LYING_PLAYMAKER_SUPPORT",
+                  "BALL_WINNING_MIDFIELDER_DEFEND",
+                  "BALL_WINNING_MIDFIELDER_SUPPORT",
+                  "ANCHOR_DEFEND",
+                  "HALF_BACK_DEFEND",
+                  "REGISTA_SUPPORT",
+                  "SEGUNDO_VOLANTE_SUPPORT",
+                  "SEGUNDO_VOLANTE_ATTACK"));
+          put(
+              "WB (L)",
+              Arrays.asList(
+                  "WING_BACK_DEFEND",
+                  "WING_BACK_SUPPORT",
+                  "WING_BACK_ATTACK",
+                  "WING_BACK_AUTOMATIC",
+                  "COMPLETE_WING_BACK_SUPPORT",
+                  "COMPLETE_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_DEFEND",
+                  "INVERTED_WING_BACK_SUPPORT",
+                  "INVERTED_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_AUTOMATIC"));
+          put(
+              "WB (R)",
+              Arrays.asList(
+                  "WING_BACK_DEFEND",
+                  "WING_BACK_SUPPORT",
+                  "WING_BACK_ATTACK",
+                  "WING_BACK_AUTOMATIC",
+                  "COMPLETE_WING_BACK_SUPPORT",
+                  "COMPLETE_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_DEFEND",
+                  "INVERTED_WING_BACK_SUPPORT",
+                  "INVERTED_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_AUTOMATIC"));
+          put(
+              "D (C)",
+              Arrays.asList(
+                  "CENTRAL_DEFENDER_DEFEND",
+                  "CENTRAL_DEFENDER_STOPPER",
+                  "CENTRAL_DEFENDER_COVER",
+                  "LIBERO_SUPPORT",
+                  "LIBERO_ATTACK",
+                  "BALL_PLAYING_DEFENDER_DEFEND",
+                  "BALL_PLAYING_DEFENDER_STOPPER",
+                  "NO_NONSENSE_CENTRE_BACK_COVER",
+                  "NO_NONSENSE_CENTRE_BACK_DEFEND",
+                  "NO_NONSENSE_CENTRE_BACK_STOPPER",
+                  "NO_NONSENSE_CENTRE_BACK_COVER",
+                  "WIDE_CENTER_BACK_DEFEND",
+                  "WIDE_CENTER_BACK_SUPPORT",
+                  "WIDE_CENTER_BACK_ATTACK"));
+          put(
+              "D (L)",
+              Arrays.asList(
+                  "FULL_BACK_DEFEND",
+                  "FULL_BACK_SUPPORT",
+                  "FULL_BACK_ATTACK",
+                  "FULL_BACK_AUTOMATIC",
+                  "WING_BACK_DEFEND",
+                  "WING_BACK_SUPPORT",
+                  "WING_BACK_ATTACK",
+                  "WING_BACK_AUTOMATIC",
+                  "NO_NONSENSE_FULL_BACK_DEFEND",
+                  "INVERTED_WING_BACK_DEFEND",
+                  "INVERTED_WING_BACK_SUPPORT",
+                  "INVERTED_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_AUTOMATIC"));
+          put(
+              "D (R)",
+              Arrays.asList(
+                  "FULL_BACK_DEFEND",
+                  "FULL_BACK_SUPPORT",
+                  "FULL_BACK_ATTACK",
+                  "FULL_BACK_AUTOMATIC",
+                  "WING_BACK_DEFEND",
+                  "WING_BACK_SUPPORT",
+                  "WING_BACK_ATTACK",
+                  "WING_BACK_AUTOMATIC",
+                  "NO_NONSENSE_FULL_BACK_DEFEND",
+                  "INVERTED_WING_BACK_DEFEND",
+                  "INVERTED_WING_BACK_SUPPORT",
+                  "INVERTED_WING_BACK_ATTACK",
+                  "INVERTED_WING_BACK_AUTOMATIC"));
+          put(
+              "GK",
+              Arrays.asList(
+                  "GOALKEEPER_DEFEND",
+                  "SWEEPER_KEEPER_DEFEND",
+                  "SWEEPER_KEEPER_SUPPORT",
+                  "SWEEPER_KEEPER_ATTACK"));
+        }
+      };
   private final PlayerAbilityCalculator abilityCalculator = new PlayerAbilityCalculator();
-  List<Label> playerLabels = new ArrayList<>();
-  List<ComboBox<String>> comboBoxes = new ArrayList<>();
   private int blueCirclesCount = 0;
   private int playerCircleCount = 0;
   private List<Player> players; // List of players loaded from the CSV or other data source
@@ -55,8 +235,6 @@ public class SquadBuilder extends Application {
   public static void main(String[] args) {
     launch(args);
   }
-
-
 
   @Override
   public void start(Stage primaryStage) {
@@ -111,7 +289,6 @@ public class SquadBuilder extends Application {
     primaryStage.show();
   }
 
-
   private void configureButtonArea(GridPane root) {
     Pane area1 = createPaneWithBackground();
     Button myButton = createStyledButton(event -> onFileChooserButtonClick());
@@ -120,24 +297,21 @@ public class SquadBuilder extends Application {
     root.add(area1, 0, 0);
   }
 
-
-
   private void centerNodeInPane(Node node, Pane pane) {
     if (node instanceof Region region) {
-      region.layoutXProperty().bind(pane.widthProperty().subtract(region.widthProperty()).divide(2));
-      region.layoutYProperty().bind(pane.heightProperty().subtract(region.heightProperty()).divide(2));
+      region
+          .layoutXProperty()
+          .bind(pane.widthProperty().subtract(region.widthProperty()).divide(2));
+      region
+          .layoutYProperty()
+          .bind(pane.heightProperty().subtract(region.heightProperty()).divide(2));
     }
   }
-
-
-
-
-
 
   private Pane createPaneWithBackground() {
     Pane pane = new Pane();
     pane.setStyle(
-            "-fx-background-color: " + Constants.LIGHT_COLOR + "; -fx-background-radius: 10;");
+        "-fx-background-color: " + Constants.LIGHT_COLOR + "; -fx-background-radius: 10;");
     return pane;
   }
 
@@ -196,19 +370,19 @@ public class SquadBuilder extends Application {
   private void createPenaltyArea(Pane pane, double yFactor, boolean fromTop) {
     Rectangle penaltyArea = new Rectangle();
     bindRectangleToPaneProportions(
-            penaltyArea, pane, 0.2, fromTop ? yFactor : 1 - yFactor, 0.6, 0.2);
+        penaltyArea, pane, 0.2, fromTop ? yFactor : 1 - yFactor, 0.6, 0.2);
     penaltyArea.setFill(Color.TRANSPARENT);
     penaltyArea.setStroke(Color.web(DARK_COLOR));
     pane.getChildren().add(penaltyArea);
   }
 
   private void bindRectangleToPaneProportions(
-          Rectangle rect,
-          Pane pane,
-          double xFactor,
-          double yFactor,
-          double widthFactor,
-          double heightFactor) {
+      Rectangle rect,
+      Pane pane,
+      double xFactor,
+      double yFactor,
+      double widthFactor,
+      double heightFactor) {
     rect.xProperty().bind(pane.widthProperty().multiply(xFactor));
     rect.yProperty().bind(pane.heightProperty().multiply(yFactor));
     rect.widthProperty().bind(pane.widthProperty().multiply(widthFactor));
@@ -227,58 +401,58 @@ public class SquadBuilder extends Application {
 
   private void createPlayerPositions(Pane pane) {
     double[][] playerCirclePositions = {
-            {0.42, 0.2},
-            {0.5, 0.2},
-            {0.58, 0.2}, // Strikers
-            {0.42, 0.35},
-            {0.5, 0.35},
-            {0.58, 0.35}, // Attacking Midfielders
-            {0.1, 0.35},
-            {0.9, 0.35},
-            {0.1, 0.5},
-            {0.9, 0.5}, // Wing Midfielders
-            {0.42, 0.5},
-            {0.5, 0.5},
-            {0.58, 0.5}, // Central Midfielders
-            {0.42, 0.65},
-            {0.5, 0.65},
-            {0.58, 0.65}, // Defensive Midfielders
-            {0.1, 0.65},
-            {0.9, 0.65},
-            {0.1, 0.8},
-            {0.9, 0.8}, // Wingbacks
-            {0.42, 0.8},
-            {0.5, 0.8},
-            {0.58, 0.8}, // Defensive Centers
-            {0.5, 0.9} // Goalkeeper
+      {0.42, 0.2},
+      {0.5, 0.2},
+      {0.58, 0.2}, // Strikers
+      {0.42, 0.35},
+      {0.5, 0.35},
+      {0.58, 0.35}, // Attacking Midfielders
+      {0.1, 0.35},
+      {0.9, 0.35},
+      {0.1, 0.5},
+      {0.9, 0.5}, // Wing Midfielders
+      {0.42, 0.5},
+      {0.5, 0.5},
+      {0.58, 0.5}, // Central Midfielders
+      {0.42, 0.65},
+      {0.5, 0.65},
+      {0.58, 0.65}, // Defensive Midfielders
+      {0.1, 0.65},
+      {0.9, 0.65},
+      {0.1, 0.8},
+      {0.9, 0.8}, // Wingbacks
+      {0.42, 0.8},
+      {0.5, 0.8},
+      {0.58, 0.8}, // Defensive Centers
+      {0.5, 0.9} // Goalkeeper
     };
 
     List<List<String>> playerPositions =
-            Arrays.asList(
-                    List.of("ST (C)"),
-                    List.of("ST (C)"),
-                    List.of("ST (C)"), // Strikers
-                    Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"),
-                    Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"),
-                    Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"), // Attacking Midfielders
-                    Arrays.asList("AM (RLC)", "AM (LC)", "AM (L)", "M/AM (L)"), // Wing Midfielders (AML)
-                    Arrays.asList("AM (RLC)", "AM (RC)", "AM (R)", "M/AM (R)"), // Wing Midfielders (AMR)
-                    Arrays.asList("M (L)", "M/AM (L)"), // Central Midfielders (WML)
-                    Arrays.asList("M (R)", "M/AM (R)"), // Central Midfielders (WMR)
-                    Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
-                    Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
-                    Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"), // Central Midfielders (CM)
-                    List.of("DM"),
-                    List.of("DM"),
-                    List.of("DM"), // Defensive Midfielders
-                    List.of("WB (L)"), // Wingback left
-                    List.of("WB (R)"), // Wingback right
-                    Arrays.asList("D (L)", "D (RL)", "D (RLC)"), // Wingbacks (DWL)
-                    Arrays.asList("D (R)", "D (RL)", "D (RLC)"), // Wingbacks (DWR)
-                    List.of("D (C)"),
-                    List.of("D (C)"),
-                    List.of("D (C)"), // Defensive Centers
-                    List.of("GK") // Goalkeeper
+        Arrays.asList(
+            List.of("ST (C)"),
+            List.of("ST (C)"),
+            List.of("ST (C)"), // Strikers
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"),
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"),
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)", "AM (C)"), // Attacking Midfielders
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (L)", "M/AM (L)"), // Wing Midfielders (AML)
+            Arrays.asList("AM (RLC)", "AM (RC)", "AM (R)", "M/AM (R)"), // Wing Midfielders (AMR)
+            Arrays.asList("M (L)", "M/AM (L)"), // Central Midfielders (WML)
+            Arrays.asList("M (R)", "M/AM (R)"), // Central Midfielders (WMR)
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"), // Central Midfielders (CM)
+            List.of("DM"),
+            List.of("DM"),
+            List.of("DM"), // Defensive Midfielders
+            List.of("WB (L)"), // Wingback left
+            List.of("WB (R)"), // Wingback right
+            Arrays.asList("D (L)", "D (RL)", "D (RLC)"), // Wingbacks (DWL)
+            Arrays.asList("D (R)", "D (RL)", "D (RLC)"), // Wingbacks (DWR)
+            List.of("D (C)"),
+            List.of("D (C)"),
+            List.of("D (C)"), // Defensive Centers
+            List.of("GK") // Goalkeeper
             );
 
     for (int i = 0; i < playerCirclePositions.length; i++) {
@@ -293,10 +467,13 @@ public class SquadBuilder extends Application {
   }
 
   private void bindCircleToPosition(Circle player, double[] position) {
-    player.centerXProperty().bind(boundary.widthProperty().multiply(position[0]).add(boundary.xProperty()));
-    player.centerYProperty().bind(boundary.heightProperty().multiply(position[1]).add(boundary.yProperty()));
+    player
+        .centerXProperty()
+        .bind(boundary.widthProperty().multiply(position[0]).add(boundary.xProperty()));
+    player
+        .centerYProperty()
+        .bind(boundary.heightProperty().multiply(position[1]).add(boundary.yProperty()));
   }
-
 
   private Circle createPlayerCircle() {
     Circle circle = new Circle();
@@ -306,7 +483,8 @@ public class SquadBuilder extends Application {
     circle.setId("circle_" + playerCircleCount);
 
     List<String> rolesForCircle = Collections.singletonList("Role_" + playerCircleCount);
-    System.out.println("Created circle with ID: " + circle.getId() + " and roles: " + rolesForCircle);
+    System.out.println(
+        "Created circle with ID: " + circle.getId() + " and roles: " + rolesForCircle);
     circleToPositionMap.put(circle, rolesForCircle);
 
     playerCircleCount++;
@@ -325,26 +503,26 @@ public class SquadBuilder extends Application {
 
     // Add a listener to adjust ComboBox spacing when the area's height changes
     area3
-            .heightProperty()
-            .addListener((observable, oldValue, newValue) -> adjustComboBoxSpacing(comboBoxes, area3));
+        .heightProperty()
+        .addListener((observable, oldValue, newValue) -> adjustComboBoxSpacing(comboBoxes, area3));
   }
 
   private void configurePlayerListArea(GridPane root) {
     Pane area4 = createPaneWithBackground();
     addPlayerLabelsToArea4(area4);
     List<String> DefaultPlayerPositions =
-            Arrays.asList(
-                    "Position 1",
-                    "Position 2",
-                    "Position 3",
-                    "Position 4",
-                    "Position 5",
-                    "Position 6",
-                    "Position 7",
-                    "Position 8",
-                    "Position 9",
-                    "Position 10",
-                    "Position 11");
+        Arrays.asList(
+            "Position 1",
+            "Position 2",
+            "Position 3",
+            "Position 4",
+            "Position 5",
+            "Position 6",
+            "Position 7",
+            "Position 8",
+            "Position 9",
+            "Position 10",
+            "Position 11");
 
     updatePlayerLabels(DefaultPlayerPositions);
 
@@ -362,25 +540,23 @@ public class SquadBuilder extends Application {
       // New functionality
       List<String> positions = circleToPositionMap.get(circle);
       List<Player> playersForPosition =
-              players.stream()
-                      .filter(
-                              player -> {
-                                String[] playerPositions = player.getBasicInfo().getPosition().split(",\\s*");
-                                for (String pos : playerPositions) {
-                                  if (positions.contains(pos)
-                                          || positions.contains(player.getBasicInfo().getSecondaryPosition())) {
-                                    return true;
-                                  }
-                                }
-                                return false;
-                              })
-                      .collect(Collectors.toList());
+          players.stream()
+              .filter(
+                  player -> {
+                    String[] playerPositions = player.getBasicInfo().position().split(",\\s*");
+                    for (String pos : playerPositions) {
+                      if (positions.contains(pos)
+                          || positions.contains(player.getBasicInfo().secondaryPosition())) {
+                        return true;
+                      }
+                    }
+                    return false;
+                  })
+              .collect(Collectors.toList());
 
       System.out.println("Checking for positions: " + positions);
       System.out.println("Number of players found: " + playersForPosition.size());
       displayPlayersForPosition(playersForPosition, String.join("/", positions));
-
-
 
     } else if (currentColor.equals(Color.web(BLUE_COLOR))) {
       System.out.println("Circle was BLUE_COLOR. Now turning it DARK_COLOR.");
@@ -395,10 +571,6 @@ public class SquadBuilder extends Application {
       }
     }
   }
-
-
-
-
 
   private void adjustComboBoxSpacing(List<ComboBox<String>> comboBoxes, Pane container) {
     double comboBoxHeight = 25;
@@ -420,15 +592,16 @@ public class SquadBuilder extends Application {
   private void configureComboBoxes(Pane container) {
     for (int i = 0; i < 11; i++) {
       ComboBox<String> comboBox = new ComboBox<>();
-      comboBox.layoutXProperty().bind(container.widthProperty().subtract(comboBox.widthProperty()).divide(2));
+      comboBox
+          .layoutXProperty()
+          .bind(container.widthProperty().subtract(comboBox.widthProperty()).divide(2));
 
-      comboBox.setOnAction(event -> {
-        if (comboBox.getValue() != null) {
-          displayPlayersForPosition(players, comboBox.getValue());
-        }
-      });
-
-
+      comboBox.setOnAction(
+          event -> {
+            if (comboBox.getValue() != null) {
+              displayPlayersForPosition(players, comboBox.getValue());
+            }
+          });
 
       comboBoxes.add(comboBox);
       styleComboBox(comboBox);
@@ -436,24 +609,21 @@ public class SquadBuilder extends Application {
     }
   }
 
-
-
-
-
   private void populateNextAvailableComboBox(List<String> roles) {
     for (ComboBox<String> comboBox : comboBoxes) {
       if (comboBox.isDisable()) {
         System.out.println("Populating ComboBox with roles: " + roles);
         comboBox.getItems().clear();
         for (String role : roles) {
-          comboBox.getItems().addAll(positionToRolesMap.getOrDefault(role, Collections.emptyList()));
+          comboBox
+              .getItems()
+              .addAll(positionToRolesMap.getOrDefault(role, Collections.emptyList()));
         }
         comboBox.setDisable(false); // enable the comboBox
         break;
       }
     }
   }
-
 
   private void addPlayerLabelsToArea4(Pane area4) {
 
@@ -523,16 +693,19 @@ public class SquadBuilder extends Application {
         }
 
         // Find the player with the highest ability for the selected role
-        Player bestPlayer = playerAbilityMap.entrySet().stream()
+        Player bestPlayer =
+            playerAbilityMap.entrySet().stream()
                 .max(Map.Entry.comparingByValue())
                 .map(Map.Entry::getKey)
                 .orElse(null);
 
         // Display the best player for the selected role
         if (bestPlayer != null) {
-          playerLabels.get(blueCirclesCount - 1).setText(bestPlayer.getBasicInfo().getName());
+          playerLabels.get(blueCirclesCount - 1).setText(bestPlayer.getBasicInfo().name());
         } else {
-          playerLabels.get(blueCirclesCount - 1).setText("No Player for " + position + " in role " + selectedRole.name());
+          playerLabels
+              .get(blueCirclesCount - 1)
+              .setText("No Player for " + position + " in role " + selectedRole.name());
         }
       } else {
         playerLabels.get(blueCirclesCount - 1).setText("No Player for " + position);
@@ -540,16 +713,14 @@ public class SquadBuilder extends Application {
     }
   }
 
-
-
   protected void onFileChooserButtonClick() {
     File selectedFile = selectFile();
     if (selectedFile != null) {
       String csvFilePath = "src/main/resources/Squad.csv";
       if (convertHtmlToCsv(selectedFile.getPath(), csvFilePath)) {
         players =
-                PlayerFactory.createPlayers(csvFilePath)
-                        .orElseThrow(() -> new RuntimeException("Could not create players"));
+            PlayerFactory.createPlayers(csvFilePath)
+                .orElseThrow(() -> new RuntimeException("Could not create players"));
       }
     } else {
 
@@ -561,7 +732,7 @@ public class SquadBuilder extends Application {
     FileChooser fileChooser = new FileChooser();
     fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter("HTML Files", "*.html"));
 
-      return fileChooser.showOpenDialog(null);
+    return fileChooser.showOpenDialog(null);
   }
 
   private boolean convertHtmlToCsv(String htmlFilePath, String csvFilePath) {
@@ -591,6 +762,4 @@ public class SquadBuilder extends Application {
       }
     }
   }
-
-
 }
